--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,8 @@ html
   body
     script(src="/socket.io/socket.io.js")
     script
-      var server = io.connect('http://localhost:3000');
-      server.on('user:new', function(data) {
-        console.log("work please");
-      });
+        var server = io.connect('http://localhost:#{port}');
+
+    != js('app')
+      
     block content
