Got ip and port setup for socket.io

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,3 +2,8 @@ extends layout
 
 block content
   h1 Grocery List
+
+  form(action="#", id="item-form")
+    label(name="item_label") Item:
+    input(type="text", name="item")
+  
