--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,16 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    != css('foundation.min')
+    != css('app')
   body
     script(src="/socket.io/socket.io.js")
+    script(src="http://code.jquery.com/jquery-1.8.3.min.js")
     script
-        var server = io.connect('http://localhost:#{port}');
+        var server = io.connect('http://#{ip}:#{port}');
+        server.on('connect', function(data) {
+          console.log("Just connected dog!");
+        });
 
     != js('app')
       
