Got a baseline socketio

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,4 +6,4 @@ block content
   form(action="#", id="item-form")
     label(name="item_label") Item:
     input(type="text", name="item")
-  
+    input(type="submit", value="Add Item")
