--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,10 +8,21 @@ html
     script(src="/socket.io/socket.io.js")
     script(src="http://code.jquery.com/jquery-1.8.3.min.js")
     script
-        var server = io.connect('http://#{ip}:#{port}');
-        server.on('connect', function(data) {
-          console.log("Just connected dog!");
+      var server = io.connect('http://#{ip}:#{port}');
+      
+      server.on('connection', function(data) {
+        prompt("What is your name?");
+      });
+
+      $(document).ready(function() {
+
+        $('#item-form').submit(function(e) {
+          e.preventDefault();
+          var itemValue = $('#item-form input[type=text]').attr('value');
+          console.log(server);
+          server.emit('item:submit', itemValue);
         });
+      });
 
     != js('app')
       
